tests/golden/type_errors/substr_non_number_length_static.cd
substr("abc", 0, false);
